public/css/style.css
body{
    font-family: "Plus Jakarta Sans", sans-serif !important;
    display:flex;
    flex-direction: column;
    min-height: 100vh;

}
.container{
    flex:1;
}

.navbar{
    height: 5rem;
    background-color: white;
}
.fa-compass{
    color:#fe424d;
    font-size: 2rem;
}
.nav-link {
    color:#222222 !important;
}
.f-info-links a{
    text-decoration: none;
    color:#222222;
}

.f-info-links a:hover{
    text-decoration: underline;
    
}
.f-info-socials,.f-info-links,.f-info-brand{
   
    width:100%;
    display:flex;
    align-items: center;
    justify-content: center;
    
}
.f-info-socials i{
    margin-right:1.5rem;
    font-size:1.2rem;
    
    justify-content: center;
}

.f-info{
    text-align: center;
    display: flex;
    height:8rem;
    background-color: #ebebeb;
    flex-wrap:wrap;
    justify-content: center;
    align-items:space-evenly;
}
/* Cards */
.listing-card{
    border:none !important;
    margin-bottom: 2rem;
}
.card-img-top{
    border-radius: 1rem !important;
    width:100% !important;
    object-fit:cover !important;
}
.card-body{
    padding:0 !important;
}
.card-text{
    font-weight: 400 !important;
}

.listing-link{
    text-decoration: none;
}

/* Card overlay effect */
.card-img-overlay{
    opacity:0;
}
.card-img-overlay:hover{
    opacity:0.2;
    background-color: white
}

/* New Page */
.add-btn{
    background-color:#fe424d !important;
    border:none !important;

}

/* Edit Page  */

.edit-btn{
    background-color:#fe424d !important;
    border:none !important;


}

/* show page  */

.show-img{
    height:30vh;

}

.btns{
    display:flex;
    flex-wrap: wrap;

}

.show-card{
    padding-left: 0;
    padding-right: 0;
}
#map {
    height:400px;
    width:100vh;
    
}
@media (max-width: 767.98px) {
    #map {
        /* Smaller Height for mobile */
        height: 300px; /* Adjust this value (e.g., 200px or 300px) */
        
        /* Width should generally be 100% of the container for responsive design */
        width: 200px;
        
        /* If you truly want a fixed, smaller width, you could use a percentage of the viewport: */
        /* width: 90vw; */
    }
}
@media (max-width: 767.98px) {
    .btns {
        /* Change flex to block display to allow full-width elements to stack */
        display: block; 
        /* OR use display: flex and flex-direction: column; if you prefer flex control */
        /* display: flex; 
        flex-direction: column; */
    }
}

